2004-11-02  Vincent Noel  <vnoel@cox.net>

	* monitor.c (mon_update_display): When new lines are added to the
	logfile, select them in the monitor.

	* logrtns.c (reverse) : kill. We have g_strreverse anyway.
	(WasModified, CloseLog, ReadLogStats, ReadNewLines)
	(ReadLastPage, isLogFile, OpenLogFile): Use gnome-vfs.
	
	Aggregate the FIXME functions at the end of the file.

2004-10-31  James Bowes  <bowes@cs.dal.ca>

	* Makefile.am: Minor fixes to pass make distcheck.

2004-10-29  Vincent Noel  <vnoel@cox.net>

	* logview.c (logview_create_window_open_file): New function to
	create a window and open a file at the same time.
	(logview_count_logs): Fix a stupid bug that went unnoticed but
	made the function useless.
	(restore_session): Kill. Useless now that command line parameters
	are correctly handled.
	(save_session): Fix to save command line parameters.
	Use POPT_TABLEEND.

	* log_repaint.c: kill InitPages.

	* logview.c (main): Really try to open each log passed as a
	parameter. Only open the default logs if no log was opened.

	* logrtns.c (OpenLogFile): Mark the first_time flag here.

	* logview.c (CreateMainWin): Use a fixed size for cells in the
	gtktreeview.

2004-10-28  Vincent Noel  <vnoel@cox.net>

	* logview-findbar.c (logview_findbar_populate): Add a spacer tool
	item so the close button is at the right end of the find bar.
	(logview_findbar_populate): Add labels to the previous/next buttons.
	(logview_tree_model_search_iter_foreach): Fix issues with mixed case.
	(logview_tree_model_search_iter_foreach): Free allocated strings
	and gtk_tree_path.

	* logview.c (logview_search): Hook up the new find bar.

	* logview-findbar.h: 
	* logview-findbar.c: new. Add a Firefox-esque find
	bar. Shamelessly stolen and adapted from Yelp.

	* gedit-output-window.c: 
	* gedit-output-window.h:
	* logview-search.h: 
	* logview-search.c: 
	* logview-search-dialog.h: 
	* logview-search-dialog.c: Remove the short-lived gedit-like
	search function.
