@@ -1,5 +1,9 @@
 2004-11-02  Vincent Noel  <vnoel@cox.net>
 
+	* logrtns.c (ReadNewLines, ReadLastPage): Free a temp buffer.
+
+	* logview.h: Remove useless defines and stuff.
+
 	* monitor.c (mon_update_display): When new lines are added to the
 	logfile, select them in the monitor.
 
